--- a/css/Clarissa.css
+++ b/css/Clarissa.css
@@ -369,11 +369,42 @@ footer .copyright {
     font-size: 0.8rem;
 }
 
-/* java */
+/* witchlist java css */
+.products h2, #watchlistCount {
+    text-align: center;
+    color:#ffffff;
+    margin: 1rem auto;
+}
+#watchlistContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
 #watchlistCount {
     text-align: center;
-    color: #666;
+    color: #ffffff;
     margin-bottom: 1.5rem;
+}
+
+.watchlist-heading {
+    font-size: 2.5rem;
+    color: #fff;
+    margin-bottom: 0.5rem;
+}
+
+.watchlist-counter {
+    font-size: 1.2rem;
+    color: #ccc;
+    margin-bottom: 2rem; /* Adds space between counter and anime cards */
+}
+
+.anime-item h5 {
+    color: #fff; /* Set the anime titles to white */
+    font-size: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .anime-item {
